# payment-processor

./: .env.example  .gitignore  LICENSE  docker-compose.yaml  pyproject.toml  readme.md
app/: main.py
app/config/: settings.py
app/dependencies/: auth.py
app/factories/: file_processor_factory.py  payment_provider_factory.py
app/handlers/: payment_handler.py
app/helpers/: constants.py  providers.py
app/interfaces/: email_engine.py  file_processor.py  handlers.py  payment_engine.py
app/routers/: payment.py
app/schemas/: debt.py  payment.py
app/services/email/: email_service.py  template_service.py
app/services/email/templates/: payment_confirmation.html
app/services/files/: csv_service.py
app/services/payment/: pagbank_service.py  paypal_service.py  stripe_service.py
tests/: conftest.py
tests/fixtures/: file_fixtures.py  large_file_1000.csv  large_test_data.csv  test_data.csv
tests/integration/: test_upload.py
tests/unit/: test_factories.py  test_helpers.py  test_payment_engine_factory.py
